--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,8 @@ android {
 
 dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly files('libs/classes.jar')
+    //compileOnly files('libs/classes-rk3128.jar')
+    compileOnly files('libs/classes-rk3288.jar')
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -63,11 +64,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.android.support:multidex:1.0.0'
+
+    // butterknife
     implementation 'cn.trinea.android.common:trinea-android-common:4.2.15'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    implementation 'com.android.support:multidex:1.0.0'
+    // TimePicker
+    implementation 'com.wdullaer:materialdatetimepicker:3.5.1'
 }
 
 preBuild {
