--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ allprojects {
 
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
-            options.compilerArgs.add('-Xbootclasspath/p:app\\libs\\classes.jar')
+            options.compilerArgs.add('-Xbootclasspath/p:app\\libs\\classes-rk3288.jar')
         }
     }
 }
