--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ProtectedPermissions"
     package="com.ayst.sample"
     android:sharedUserId="android.uid.system">
 
@@ -15,6 +16,7 @@
     <uses-permission android:name="android.permission.SHUTDOWN"/>
     <uses-permission android:name="android.permission.USES_POLICY_FORCE_LOCK" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.MASTER_CLEAR" />
 
     <permission
         android:name="com.ayst.androidx.permission.SELF_BROADCAST"
