--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <service android:name="com.ayst.usb.UsbTransferServer" />
 
         <receiver
-            android:name=".items.other.ScreenOffAdminReceiver"
+            android:name=".items.other.AdminReceiver"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_DEVICE_ADMIN" >
             <meta-data
