插拔usb键盘时界面不重绘

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="keyboard|keyboardHidden|touchscreen|screenSize|navigation|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
